--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate</title>
-    <link rel="stylesheet" href="/second/styles/chocolate.css">
+    <link rel="stylesheet" href="chocolate.css">
 </head>
 
 <body>
         <header>
             <a id="top"></a>
             <div class="brand">
-                <img src="/second/images/candies_square.jpg" alt="Chocolate candies" height="100"></div>
+                <img src="candies_square.jpg" alt="Chocolate candies" height="100"></div>
             <div class="nav">
                 <nav role="navigation">
                     <ul>
